update for auto deployment

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,3 +25,9 @@ jobs:
         npm test
       env:
         CI: true
+    - name: Firebase deployment
+      if: github.ref == 'refs/heads/release'
+      run: |
+        npx firebase-tools deploy --token "$FIREBASE_TOKEN"
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
